testing/contour: upgrade to 0.6.1.7494

--- a/testing/contour/APKBUILD
+++ b/testing/contour/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Matthias Ahouansou <matthias@ahouansou.cz>
 # Maintainer: Matthias Ahouansou <matthias@ahouansou.cz>
 pkgname=contour
-pkgver=0.5.1.7247
-pkgrel=2
+pkgver=0.6.1.7494
+pkgrel=0
 pkgdesc="Modern C++ Terminal Emulator"
 url="https://contour-terminal.org"
 arch="x86_64 " # aarch64 fails due to QOpenGLFunctions_3_3_Core, rest lack libunicode
@@ -25,6 +25,7 @@ makedepends="
 	qt6-qtdeclarative-dev
 	qt6-qtmultimedia-dev
 	range-v3-dev
+	reflection-cpp-dev
 	yaml-cpp-dev
 "
 subpackages="
@@ -88,5 +89,5 @@ _zsh() {
 }
 
 sha512sums="
-0c763e543b5a279bb1b9cc1be95607354e817ba8f166aff9554c9157be7959d60e635406fce3d8ba2e15be9a62d46335ead2a497a0dcc3301249f16b317c5b69  contour-0.5.1.7247.tar.gz
+925169c3ae3b631455f2bdb19c654fb084d32e768e03fc974156a5d7331f2f7be59f7114849237568fb5feacd6d176eab45b2d2f5e2aa7498a05d847c13beb6e  contour-0.6.1.7494.tar.gz
 "
