community/vte3: split app

--- a/community/vte3/APKBUILD
+++ b/community/vte3/APKBUILD
@@ -7,7 +7,14 @@ pkgdesc="Virtual Terminal Emulator library"
 url="https://gitlab.gnome.org/GNOME/vte"
 arch="all"
 license="LGPL-2.0-or-later"
-subpackages="$pkgname-dbg $pkgname-dev $pkgname-gtk4 $pkgname-lang $pkgname-profile"
+subpackages="
+	$pkgname-app
+	$pkgname-dbg
+	$pkgname-dev
+	$pkgname-gtk4
+	$pkgname-lang
+	$pkgname-profile::noarch
+	"
 depends="adwaita-fonts $pkgname-profile"
 makedepends="
 	bash
@@ -55,14 +62,21 @@ gtk4() {
 	pkgdesc="$pkgdesc (gtk4 component)"
 	depends="adwaita-fonts $pkgname-profile"
 
-	amove usr/bin/vte-*-gtk4
 	amove usr/lib/libvte-*-gtk4.so.*
-	amove usr/share/xdg-terminals/org.gnome.Vte.App.Gtk4.desktop
-	amove usr/share/applications/org.gnome.Vte.App.Gtk4.desktop
 }
 
 profile() {
+	pkgdesc="$pkgdesc (profile files)"
+
 	amove etc/profile.d
+}
+
+app() {
+	pkgdesc="$pkgdesc (apps)"
+
+	amove usr/bin
+	amove usr/share/xdg-terminals
+	amove usr/share/applications
 }
 
 sha512sums="
