--- a/community/mercurial/APKBUILD
+++ b/community/mercurial/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mercurial
-pkgver=6.9.4
+pkgver=7.0
 pkgrel=0
 pkgdesc="Scalable distributed SCM tool"
 url="https://www.mercurial-scm.org/"
@@ -13,6 +13,7 @@ makedepends="
 	gettext-dev
 	py3-gpep517
 	py3-setuptools
+	py3-setuptools_scm
 	py3-wheel
 	python3-dev
 	zlib-dev
@@ -129,6 +130,6 @@ lang() {
 }
 
 sha512sums="
-4aa6881a9044c51a2d3d421da964d9e1bcc10d794a4a299a1f22cfb59866d168eb2d3a973cf2987d613e42c1a9b4cb5fbe79e1fa1b14a37e1747f4a4d1d5a0c7  mercurial-6.9.4.tar.gz
+cc4ba2be001f60735757610a43f944153d9cd91c2dd4bde8d6aa47be71e6cfa5d36386b3c874dc7f6e29fd27c8eba3eb46ae3ed450d8e7142e8424e36455b8cc  mercurial-7.0.tar.gz
 b24e1b79ca36ac1d78a5af4e35eb87581f209255838327a7d9315c17175d41bfa4b7f98c66be078cfa1e7d27a41c1a12bba265fa6d3d30edb4e2ba599fe0ed18  blacklist.txt
 "
