--- a/community/trunk/APKBUILD
+++ b/community/trunk/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Matthias Ahouansou <matthias@ahouansou.cz>
 # Maintainer: Matthias Ahouansou <matthias@ahouansou.cz>
 pkgname=trunk
-pkgver=0.21.9
+pkgver=0.21.12
 pkgrel=0
 pkgdesc="Build, bundle & ship your Rust WASM application to the web"
 url="https://trunkrs.dev"
-arch="all !s390x" # nix
+# wasm-bindgen
+arch="all !s390x"
 license="MIT OR Apache-2.0"
 makedepends="
 	bzip2-dev
-	cargo
 	cargo-auditable
 	openssl-dev
 "
@@ -45,5 +45,5 @@ package() {
 }
 
 sha512sums="
-0cd5d4105a728ab40d2574c784bc21aa62634e5d12e07862383d044a076e9c1afba6611fec0ebb63463f46a82a28810a91cb68a82dab6184ab0db36ee864ed11  trunk-0.21.9.tar.gz
+38541dd054169bb72869afb11f9b01960ac490d76a0246f53404d79f372d58313220bf690b040a190f651c824624b1bd36040a251d457816e4a404fd85fa0134  trunk-0.21.12.tar.gz
 "
