community/phoc: upgrade to 0.46.0
https://gitlab.gnome.org/World/Phosh/phoc/-/blob/v0.46.0/NEWS

--- a/community/phoc/APKBUILD
+++ b/community/phoc/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: team/phosh <newbie13xd@gmail.com>
 pkgname=phoc
-pkgver=0.45.0
+pkgver=0.46.0
 pkgrel=0
 pkgdesc="wlroots based Phone compositor for the Phosh shell"
 arch="all"
@@ -17,6 +17,7 @@ depends="
 	"
 _wlrootsmakedepends="
 	eudev-dev
+	glslang
 	hwdata-dev
 	libcap-dev
 	libdisplay-info-dev
@@ -55,6 +56,7 @@ prepare() {
 
 	patch -Np1 < subprojects/packagefiles/wlroots/0001-Revert-layer-shell-error-on-0-dimension-without-anch.patch -d subprojects/wlroots
 	patch -Np1 < subprojects/packagefiles/wlroots/0001-seat-Don-t-forget-to-destroy-touch-points-on-touch-u.patch -d subprojects/wlroots
+	patch -Np1 < subprojects/packagefiles/wlroots/0001-xwm-Handle-NET_WM_WINDOW_OPACITY.patch -d subprojects/wlroots
 }
 
 build() {
@@ -83,5 +85,5 @@ package() {
 }
 
 sha512sums="
-3b647c41577ba792f490b97b9f1c00634e581b47bf2534e54b56ce0ab3e248afdc1f366d726bea64ed1b79cdc0779f1d22576983fafc348a51be1314fa77f607  phoc-0.45.0.tar.xz
+cb089a48dd12e2885fa7fa23df62b4ee60f3701900327195f74afda528cc736322e7f29440fcff5fa81cfebf6ffcffee5c4b67a127823b438da577d3fc3c3747  phoc-0.46.0.tar.xz
 "
