community/librewolf: upgrade to 136.0.4_p1, enable on riscv64

--- a/community/librewolf/APKBUILD
+++ b/community/librewolf/APKBUILD
@@ -3,17 +3,16 @@
 # Contributor: Patrycja Rosa <alpine@ptrcnull.me>
 maintainer="Sertonix <sertonix@posteo.net>"
 pkgname=librewolf
-pkgver=136.0.1_p1
+pkgver=136.0.4_p1
 pkgrel=0
 _settings_commit=88d50cb2d4a6c5a3e7840abfdf9e5d74a4eb689a
-_l10n_commit=956d64148866e6ec27d1a617535723c775c1ec9b
+_l10n_commit=d318af75ffbb93de49d5a5536e1754c2530cb07d
 pkgdesc="Community-maintained fork of Firefox, focused on privacy, security and freedom."
 url="https://librewolf.net/"
 # s390x blocked by lld
 # armhf: https://bugzilla.mozilla.org/show_bug.cgi?id=1680495
-# riscv64: vpx symbol is missing #15412
 # loongarch64: SIGSEGV: invalid memory reference
-arch="x86_64 armv7 aarch64 x86 ppc64le"
+arch="all !s390x !armhf !loongarch64"
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 # ffmpeg 6 -> 112
 depends="
@@ -684,10 +683,10 @@ package() {
 }
 
 sha512sums="
-3420a485a33fe777c789d349f841bea64a5dff3bd5349c7d47814a1ff64d9988e0b29a8476b98bd9211c335e750913ea5dc977be60d2982b2a0c31fa661c234b  librewolf-source-136.0.1_p1.tar.gz
+6c81e92b2ed7dc8f518afd37c7b04e528a78049123601da5504a7b0eb1ba97cc5baa20b5926315fa9cda22f3ebf46fd262bc0189fa327e3abf0f6d0b720ea640  librewolf-source-136.0.4_p1.tar.gz
 071f71a22fa1cce004baf5c622342975d0d715046f8544bef0ae95644bc3c198958933a45003254ce0d7bc4cf335f793b1372d4a4f4f78c73c47288e4a6b2d5e  librewolf-settings-88d50cb2d4a6c5a3e7840abfdf9e5d74a4eb689a.tar.gz
-e5833ccf97796c15b5156357427621d1f2d1d7ee55b53262f3935eadb98229c74a355bbe2f72a4168ec4e29dd3f83f4eaca99c5215d61bd087475331d3522abd  firefox-136.0.1.tar.xz
-fd8d2e8eefea2afd791c633c62aa347242e1239961297e6af64b964cd33f57858f3c02ab267564662bfcd91e9b216ceb3560ef08727d74dd0fa9f77e00a48404  firefox-l10n-956d64148866e6ec27d1a617535723c775c1ec9b.tar.gz
+c2252aa62d015ced6534cb2ac071f68089997b46690083cc1eff4bad306ae6c86543719ed2d35f6f973bf74467d6a04aba460d309c06dea425e76c720e344e28  firefox-136.0.4.tar.xz
+6bde34ae2e396ac21b2bcd7563ea309411a5877577354da6ed37df6cc8fe5545e56d32131dc547e736bb1b342bb8835d8ff880989b7ed2915a95295f78073b33  firefox-l10n-d318af75ffbb93de49d5a5536e1754c2530cb07d.tar.gz
 616169325dc7715d3ff558c1846394d992f1a0a9427af5339e84abf3d9e7d85a5f9f6bae218ee3416ef39769a56150ac35881435ac09b976876fd556fddeac38  abseil-cpp.patch
 32c566a1529d36b4816cef80bb56f0723d0ec2e407e5e4a61cd278d40dafa3a3032d5a77497f191989f4954fa3ee539845dd170a596e0b22c6ef5b337405a72e  bmo-1952657-no-execinfo.patch
 19eea840aa9c1c21e7bd1f832ec078989fe6f08fca40baa271be7e74f1cffeb5ab8d3218a93e664b8d90a41506dede524e2a5174cd47580866109bc6711ea969  fix-fortify-system-wrappers.patch
