community/wasm-bindgen: enable on s390x

--- a/community/wasm-bindgen/APKBUILD
+++ b/community/wasm-bindgen/APKBUILD
@@ -4,8 +4,7 @@ pkgver=0.2.95
 pkgrel=0
 pkgdesc="Interoperating JS and Rust code"
 url="https://github.com/rustwasm/wasm-bindgen"
-# s390x: limited by lld & rust-wasm
-arch="all !s390x"
+arch="all"
 license="Apache-2.0"
 depends="cargo nodejs rust-wasm"
 makedepends="
