community/trunk: enable on s390x

--- a/community/trunk/APKBUILD
+++ b/community/trunk/APKBUILD
@@ -5,8 +5,7 @@ pkgver=0.21.13
 pkgrel=0
 pkgdesc="Build, bundle & ship your Rust WASM application to the web"
 url="https://trunkrs.dev"
-# wasm-bindgen
-arch="all !s390x"
+arch="all"
 license="MIT OR Apache-2.0"
 makedepends="
 	bzip2-dev
