community/wpewebkit: build without libjxl-dev on s390x
libjxl is not enabled on s390x

--- a/community/wpewebkit/APKBUILD
+++ b/community/wpewebkit/APKBUILD
@@ -21,7 +21,6 @@ makedepends="
 	gst-plugins-base-dev
 	gtk-doc
 	harfbuzz-dev
-	libjxl-dev
 	lcms2-dev
 	libavif-dev
 	libepoxy-dev
@@ -50,6 +49,14 @@ source="https://wpewebkit.org/releases/wpewebkit-$pkgver.tar.xz
 	gettext.patch
 	"
 options="!check"
+
+case "$CARCH" in
+s390x)
+	;; # unavailable
+*)
+	makedepends="$makedepends libjxl-dev"
+	;;
+esac
 
 case "$CARCH" in
 s390x|riscv64)
