main/lld*: fix provides for lld-dev

--- a/main/lld19/APKBUILD
+++ b/main/lld19/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgver=19.1.7
-pkgrel=2
+pkgrel=3
 _llvmver=${pkgver%%.*}
 _prevllvmver=$((_llvmver - 1))
 pkgname=lld$_llvmver
@@ -41,6 +41,12 @@ _default_lld="yes"
 if [ "$_default_lld" = yes ]; then
 	provides="lld=$pkgver-r$pkgrel"
 	replaces="lld"
+
+	dev() {
+		default_dev
+		provides="lld-dev=$pkgver-r$pkgrel"
+		replaces="lld-dev"
+	}
 fi
 
 replaces="lld$_prevllvmver"
