--- a/main/lld20/APKBUILD
+++ b/main/lld20/APKBUILD
@@ -41,6 +41,12 @@ _default_lld="no"
 if [ "$_default_lld" = yes ]; then
 	provides="lld=$pkgver-r$pkgrel"
 	replaces="lld"
+
+	dev() {
+		default_dev
+		provides="lld-dev=$pkgver-r$pkgrel"
+		replaces="lld-dev"
+	}
 fi
 
 replaces="lld$_prevllvmver"
