--- a/main/dovecot/APKBUILD
+++ b/main/dovecot/APKBUILD
@@ -12,7 +12,7 @@ case "$pkgver" in
 	*.*.*.*) _pkgverminor=${pkgver%.*.*};;
 	*.*.*) _pkgverminor=${pkgver%.*};;
 esac
-pkgrel=0
+pkgrel=1
 _pigeonholever=2.4.0
 pkgdesc="IMAP and POP3 server"
 url="https://www.dovecot.org/"
@@ -68,6 +68,8 @@ source="https://www.dovecot.org/releases/$_pkgverminor/dovecot-$pkgver.tar.gz
 	$pkgname-pigeonhole-$_pigeonholever.tar.gz::https://pigeonhole.dovecot.org/releases/$_pkgverminor/dovecot-pigeonhole-$_pigeonholever.tar.gz
 	skip-iconv-check.patch
 	headers.patch
+	setting-types.patch
+	setting-types-pigeonhole
 	dovecot.logrotate
 	dovecot.initd
 	"
@@ -122,6 +124,9 @@ prepare() {
 
 	cd "$_builddir_pigeonhole"
 	update_config_sub
+
+	# Apply patch for dovecot-pigeonhole
+	patch -p1 -i "$srcdir"/setting-types-pigeonhole
 }
 
 _configure() {
@@ -247,7 +252,7 @@ _protocol() {
 
 	mkdir -p "$protocolsd"
 	echo "protocols = \$protocols $name" \
-		> "$protocolsd"/${subpkgname#$pkgname-}.conf
+		> "$protocolsd"/${subpkgname#"$pkgname"-}.conf
 }
 
 _sieve() {
@@ -359,6 +364,8 @@ sha512sums="
 489d6c89f74ca66d0c94a4d701ad64cf94e0feadc7da6026a98735bde9d24d2be24c25ab296aee0287745f3a522a12ae071382dcef5143c1333dc843bcfce3aa  dovecot-pigeonhole-2.4.0.tar.gz
 fe4fbeaedb377d809f105d9dbaf7c1b961aa99f246b77189a73b491dc1ae0aa9c68678dde90420ec53ec877c08f735b42d23edb13117d7268420e001aa30967a  skip-iconv-check.patch
 043620ea5d89d561f8f4ebb725368eba5133f1a4e2ff6d682a4abef9d15e04d638a56f4322d34645b1a7e6db0fdd7bf73692771012de903401b9ea25353c354c  headers.patch
+788234404ebeea514b0598885b88d7b8e4a4ec9c358495e76a937a3d0f02d7b30c47cc345ba33cc952fb8d0f06e6b3f2147e6931564eb240835cacd1d3c40532  setting-types.patch
+f099b25c5a48ba21bf26046864480d4c021ac46d1c61c146033de6093a5d86dab06902ccf638ac7895bbd1df720d483ed5be23889d7c4ea5309969b1c39f1f42  setting-types-pigeonhole
 9f19698ab45969f1f94dc4bddf6de59317daee93c9421c81f2dbf8a7efe6acf89689f1d30f60f536737bb9526c315215d2bce694db27e7b8d7896036a59c31f0  dovecot.logrotate
 d91951b81150d7a3ef6a674c0dc7b012f538164dac4b9d27a6801d31da6813b764995a438f69b6a680463e1b60a3b4f2959654f68e565fe116ea60312d5e5e70  dovecot.initd
 "
