main/{llvm,clang}*: set default target to CHOST not CBUILD
This fixes llvm using an incorrect default when cross compiled.

Fixes df54f12335b3 testing/llvm3.7: new aport
Fixes 081c30a39ce1 main/clang16: fix clang default targets for armhf/armv7/s390x

--- a/main/clang19/APKBUILD
+++ b/main/clang19/APKBUILD
@@ -207,8 +207,8 @@ package() {
 	# the target triple being built for
 	# in LLVM, we set -DLLVM_DEFAULT_TARGET_TRIPLE to the same thing,
 	# so that is the default triple, and one of the checked files.
-	# it's possible to do CBUILD-clang.cfg and similar to make it per-tool
-	mv config.cfg "$pkgdir"/etc/clang$_llvmver/$CBUILD.cfg
+	# it's possible to do CHOST-clang.cfg and similar to make it per-tool
+	mv config.cfg "$pkgdir"/etc/clang$_llvmver/$CHOST.cfg
 
 	DESTDIR="$pkgdir" cmake --install build
 	mkdir -p "$pkgdir"/usr/bin
