--- a/main/llvm15/APKBUILD
+++ b/main/llvm15/APKBUILD
@@ -151,7 +151,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/$_prefix \
 		-DCMAKE_INSTALL_RPATH=/$_prefix \
 		\
-		-DLLVM_DEFAULT_TARGET_TRIPLE="$CBUILD" \
+		-DLLVM_DEFAULT_TARGET_TRIPLE="$CHOST" \
 		-DLLVM_HOST_TRIPLE="$CHOST" \
 		\
 		-DFFI_INCLUDE_DIR="$ffi_include_dir" \
