--- a/main/hostapd/APKBUILD
+++ b/main/hostapd/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=hostapd
 pkgver=2.11
-pkgrel=2
+pkgrel=3
 pkgdesc="daemon for wireless software access points"
 url="https://w1.fi/hostapd/"
 arch="all"
@@ -52,7 +52,7 @@ prepare() {
 			-e '/^#CONFIG_DRIVER_WIRED=y/s/^#//' \
 			-e '/^#CONFIG_DRIVER_NONE=y/s/^#//' \
 			-e '/^#CONFIG_IEEE80211N=y/s/^#//' \
-			-e '/^#CONFIG_IEEE80211V=y/s/^#//' \
+			-e '/^#CONFIG_WNM=y/s/^#//' \
 			-e '/^#CONFIG_IEEE80211R=y/s/^#//' \
 			-e '/^#CONFIG_IEEE80211AC=y/s/^#//' \
 			-e '/^#CONFIG_IEEE80211AX=y/s/^#//' \
