main/gpsd: make sure timepps.h is detected

--- a/main/gpsd/APKBUILD
+++ b/main/gpsd/APKBUILD
@@ -6,7 +6,7 @@
 
 pkgname=gpsd
 pkgver=3.25
-pkgrel=2
+pkgrel=3
 pkgdesc="GPS daemon"
 arch="all"
 url="https://gpsd.gitlab.io/gpsd/index.html"
@@ -42,7 +42,7 @@ prepare() {
 }
 
 build() {
-	CPPFLAGS="$CPPFLAGS -I$builddir -DHAVE_SYS_TIMEPPS_H"
+	CPPFLAGS="$CPPFLAGS -I$builddir" \
 	scons -j${JOBS:-1} \
 		prefix=/usr \
 		target_python=python3 \
@@ -52,10 +52,12 @@ build() {
 }
 
 check() {
+	CPPFLAGS="$CPPFLAGS -I$builddir" \
 	scons check
 }
 
 package() {
+	CPPFLAGS="$CPPFLAGS -I$builddir" \
 	DESTDIR="$pkgdir" scons install
 	install -m755 -D "$srcdir"/gpsd.initd "$pkgdir"/etc/init.d/gpsd
 	install -m644 -D "$srcdir"/gpsd.confd "$pkgdir"/etc/conf.d/gpsd
