community/wpewebkit: really build without libjxl on s390x

--- a/community/wpewebkit/APKBUILD
+++ b/community/wpewebkit/APKBUILD
@@ -52,8 +52,10 @@ options="!check"
 
 case "$CARCH" in
 s390x)
-	;; # unavailable
+	_use_jpegxl=OFF # unavailable
+	;;
 *)
+	_use_jpegxl=ON
 	makedepends="$makedepends libjxl-dev"
 	;;
 esac
@@ -109,6 +111,7 @@ build() {
 		-DENABLE_JOURNALD_LOG=Off \
 		-DUSE_LIBBACKTRACE=False \
 		-DUSE_SYSTEM_SYSPROF_CAPTURE=NO \
+		-DUSE_JPEGXL=$_use_jpegxl \
 		-GNinja \
 		$CMAKE_CROSSOPTS .
 	cmake --build build
