--- a/testing/mapnik/APKBUILD
+++ b/testing/mapnik/APKBUILD
@@ -27,9 +27,7 @@ makedepends="
 	zlib-dev
 	"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://github.com/mapnik/mapnik/releases/download/v$pkgver/mapnik-v$pkgver.tar.bz2
-	gcc13.patch
-	"
+source="https://github.com/mapnik/mapnik/releases/download/v$pkgver/mapnik-v$pkgver.tar.bz2"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check" # fail to build
 
@@ -70,5 +68,4 @@ doc() {
 
 sha512sums="
 94c92c5cf34a42f495dd115f75871f13fc6b43547e1e597d8e9b12e0b92d54705e0625c909f39cb21e163e78daef746d868d88b0743bb97e63b7107d25a93b15  mapnik-v4.0.6.tar.bz2
-b9de94825d5c9934adcfd451b1fada42d17d9b79345649c19d9d1b3db333309086b7de711e9fb44038a3ba992c27d520f6a5a66f656c267f9e8d286ad2bec920  gcc13.patch
 "
