--- a/community/angelfish/APKBUILD
+++ b/community/angelfish/APKBUILD
@@ -3,12 +3,12 @@
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=angelfish
 pkgver=24.12.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Small Webbrowser for Plasma Mobile"
 # armhf blocked by qt6-qtdeclarative
 # ppc64le, s390x and riscv64 blocked by qt6-qtwebengine
 arch="all !ppc64le !s390x !armhf !riscv64"
-url="https://phabricator.kde.org/source/plasma-angelfish/"
+url="https://apps.kde.org/angelfish/"
 license="GPL-3.0-or-later"
 depends="
 	kirigami-addons
