community/hyprland: enable plugin-manager

--- a/community/hyprland/APKBUILD
+++ b/community/hyprland/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="Zach DeCook <zachdecook@librem.one>"
 pkgname=hyprland
 pkgver=0.47.2
-pkgrel=0
+pkgrel=1
 _commit="882f7ad7d2bbfc7440d0ccaef93b1cdd78e8e3ff"
 pkgdesc="Independent, highly customizable, dynamic tiling Wayland compositor that doesn't sacrifice on its looks."
 url="https://hyprland.org"
@@ -57,6 +57,14 @@ subpackages="
 	$pkgname-zsh-completion
 	"
 
+# glaze required for hyprpm only supports little-endian
+case "$CARCH" in
+	s390x) _disable_pm="-Dhyprpm=disabled" ;;
+	*) subpackages="$subpackages $pkgname-plugin-manager:plugin_manager"
+	   makedepends="$makedepends glaze"
+	   ;;
+esac
+
 prepare() {
 	default_prepare
 	# Set some variables in version.h.in
@@ -73,7 +81,7 @@ prepare() {
 }
 
 build() {
-	abuild-meson -Dhyprpm=disabled . output
+	abuild-meson $_disable_pm . output
 	meson compile -C output
 }
 
@@ -89,6 +97,16 @@ wallpapers() {
 	pkgdesc="Wallpapers for Hyprland"
 
 	amove usr/share/hypr/wall*.png
+}
+
+plugin_manager() {
+	pkgdesc="Plugin-manager for Hyprland"
+	depends="
+		$makedepends
+		git
+	"
+
+	amove usr/bin/hyprpm
 }
 
 sha512sums="
