--- a/community/py3-tcxparser/APKBUILD
+++ b/community/py3-tcxparser/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=py3-tcxparser
 _pkgorig=python-tcxparser
 pkgver=2.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Simple parser for Garmin TCX files"
 url="https://github.com/vkurup/python-tcxparser"
 arch="noarch"
@@ -11,7 +11,7 @@ license="BSD-2-Clause"
 depends="python3 py3-lxml py3-dateutil"
 makedepends="py3-gpep517 py3-setuptools py3-wheel"
 checkdepends="py3-pytest-xdist"
-subpackages="$pkgname-pyc"
+subpackages="$pkgname-doc $pkgname-pyc"
 source="https://github.com/vkurup/python-tcxparser/archive/$pkgver/$_pkgorig-$pkgver-r1.tar.gz"
 builddir="$srcdir/$_pkgorig-$pkgver"
 
@@ -30,6 +30,8 @@ check() {
 package() {
 	python3 -m installer -d "$pkgdir" \
 		.dist/*.whl
+
+	install -Dm644 README.rst -t "$pkgdir"/usr/share/doc/$pkgname
 }
 
 sha512sums="
