community/openfst: enable ppc64le

--- a/community/openfst/APKBUILD
+++ b/community/openfst/APKBUILD
@@ -6,7 +6,7 @@ pkgrel=1
 pkgdesc="Finite-state transducers library"
 url="https://www.openfst.org"
 # doesn't build on other arches
-arch="x86_64 aarch64 armv7"
+arch="x86_64 aarch64 armv7 ppc64le"
 license="Apache-2.0"
 subpackages="
 	$pkgname-dev
