community/openfst: enable all architectures
appears to build just fine

--- a/community/openfst/APKBUILD
+++ b/community/openfst/APKBUILD
@@ -5,8 +5,7 @@ pkgver=1.8.3
 pkgrel=1
 pkgdesc="Finite-state transducers library"
 url="https://www.openfst.org"
-# doesn't build on other arches
-arch="x86_64 aarch64 armv7 ppc64le"
+arch="all"
 license="Apache-2.0"
 subpackages="
 	$pkgname-dev
