community/py3-fuzzylogic: upgrade to 1.5.0

--- a/community/py3-fuzzylogic/APKBUILD
+++ b/community/py3-fuzzylogic/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>
 pkgname=py3-fuzzylogic
 _pkgorig=fuzzylogic
-pkgver=1.4.1
+pkgver=1.5.0
 pkgrel=0
 pkgdesc="Fuzzy Logic and Fuzzy Inference implementations"
 url="https://github.com/amogorkon/fuzzylogic/"
-arch="all !s390x !armv7" # assertionErrors
+arch="all !s390x !armv7" # assertion errors
 license="MIT"
 depends="python3 py3-matplotlib py3-numpy py3-pandas"
 makedepends="py3-gpep517 py3-setuptools py3-wheel"
@@ -34,5 +34,5 @@ package() {
 }
 
 sha512sums="
-1537e3b2c40c15cfdbb2774232b181eecad2f9c69d815f7bf00c12e6aa4e7e542215b011bdcb0924a92ec2d6064dbf2395183980512efd6763f7343c5aceefb1  py3-fuzzylogic-1.4.1.tar.gz
+8f6116c6f64d4ff15dc896ae514db9115bfa0fbeedad7dec8d7733e2f48f40833c9b698ce73e5a77a7eb14db872784bc993ece7941f67241af8236a2f81b393d  py3-fuzzylogic-1.5.0.tar.gz
 "
