community/lfe: rebuild with erlang27

--- a/community/lfe/APKBUILD
+++ b/community/lfe/APKBUILD
@@ -3,13 +3,13 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=lfe
 pkgver=2.2.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Lisp Flavoured Erlang"
 url="https://lfe.io/"
 arch="all"
 license="Apache-2.0"
 depends="erlang"
-makedepends="erlang-dev"
+makedepends="erlang27-dev"
 subpackages="$pkgname-doc"
 source="https://github.com/lfe/lfe/archive/$pkgver/lfe-$pkgver.tar.gz"
 
