--- a/community/dbus-cpp/APKBUILD
+++ b/community/dbus-cpp/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=dbus-cpp
-pkgver=5.0.3
-pkgrel=16
+pkgver=5.0.4
+pkgrel=0
 pkgdesc="A header-only dbus-binding leveraging C++-11"
 url="https://gitlab.com/ubports/core/lib-cpp/dbus-cpp"
 arch="all"
@@ -10,28 +10,24 @@ depends_dev="boost-dev properties-cpp-dev"
 makedepends="$depends_dev cmake cmake-extras dbus-dev libxml2-dev process-cpp-dev gtest-dev samurai"
 checkdepends="dbus coreutils"
 subpackages="$pkgname-dev"
-source="https://gitlab.com/ubports/core/lib-cpp/dbus-cpp/-/archive/$pkgver/dbus-cpp-$pkgver.tar.gz
-	cxx.patch
-	0001-Add-missing-headers-for-GCC13.patch
-	"
+source="https://gitlab.com/ubports/core/lib-cpp/dbus-cpp/-/archive/$pkgver/dbus-cpp-$pkgver.tar.gz"
 options="!check" # Tests are too unreliable to not fail randomly
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
-		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+		local crossopts="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
 	cmake -B build -G Ninja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
-		-DBUILD_SHARED_LIBS=True \
+		-DBUILD_SHARED_LIBS=ON \
 		-DCMAKE_BUILD_TYPE=None \
-		$CMAKE_CROSSOPTS .
+		$crossopts
 	cmake --build build
 }
 
 check() {
-	cd build
-	ctest
+	ctest --test-dir build
 }
 
 package() {
@@ -39,7 +35,5 @@ package() {
 }
 
 sha512sums="
-03fcbfc856d58310a445ec02dc40e5b7a02a6ab7a5ee5455c8f56ff400a1820c9b62c7d7847eb8df8bad0e18704a35ce2a81c35864ca855cbc9a8e3965d21fc5  dbus-cpp-5.0.3.tar.gz
-19134a16963834deffe57168048505a0485099b93c03e76f309bb7b3055fef70df8ae4e5aada0e5c8564349949aa89d926b27513978d055fe30dbaf345744228  cxx.patch
-9125ebc5cfbd712b7007e19539de0d152802b3dd8a3fec2dc555f0cc1e54d327a5ccebfbbb572280f78dadf49c01cd6f508faf484d4a448dbbda9ad4df0e17bf  0001-Add-missing-headers-for-GCC13.patch
+f598d8e7f767f6455a8e308405a3b7d67b80533344e217dc6564ed8dd35c810797ff07e7e9d0b9e2a1f984f3bfaecb26e049607a2ddb1e0fbfe75d96603ff293  dbus-cpp-5.0.4.tar.gz
 "
