testing/lomiri: upgrade to 0.4.0

--- a/testing/lomiri/APKBUILD
+++ b/testing/lomiri/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=lomiri
-pkgver=0.3.0
-pkgrel=1
+pkgver=0.4.0
+pkgrel=0
 pkgdesc="A convergent desktop environment"
 # armhf: blocked by lomiri-ui-toolkit
 # riscv64: blocked by lomiri-indicator-network
@@ -54,13 +54,12 @@ makedepends="
 	"
 checkdepends="py3-dbusmock"
 source="https://gitlab.com/ubports/development/core/lomiri/-/archive/$pkgver/lomiri-$pkgver.tar.gz
-	0001-cursor-Always-follow-cursor-position-from-mir.patch
-	0002-Disable-broken-tests-due-to-dropped-mocks-from-mir-2.patch
-	0003-Add-qt5-suffix-to-search-for-Qt-tools.patch
-	0004-No-systemd.patch
-	0005-Disable-lightdm-integration.patch
-	0006-Change-hard-coded-launcher-logo-to-one-set-by-a-reso.patch
-	2010_use-desktop-qtmir.patch
+	0001-Disable-broken-tests-due-to-dropped-mocks-from-mir-2.patch
+	0002-Add-qt5-suffix-to-search-for-Qt-tools.patch
+	0003-No-systemd.patch
+	0004-Disable-lightdm-integration.patch
+	0005-Change-hard-coded-launcher-logo-to-one-set-by-a-reso.patch
+	0006-Use-Mir-2.x.patch
 	home.svg
 	"
 subpackages="$pkgname-lang"
@@ -102,13 +101,12 @@ package() {
 }
 
 sha512sums="
-d4a4731ff121b21e04225fd4afda801389dc52079cefdfb8dfb513b74c39b400e98960ba59334329bd96860dd0e707f575b14123296aff48d88a2f9e9b5f34d2  lomiri-0.3.0.tar.gz
-6a2366586584b9929baae31c689e717f5198c04639902a5ec2bfeca20d0b176dde280cc64ba9ea90d8d1784aaacc86d642f800880e11c7e295eb18027f7cf013  0001-cursor-Always-follow-cursor-position-from-mir.patch
-9a2a5dbc1fcfb94a354c56c0fe59395a42999f277c1353685cc10346154cea5d368d1f6471c5d0b62fbde8474b0411191ff4d21105752f7140434dde20434343  0002-Disable-broken-tests-due-to-dropped-mocks-from-mir-2.patch
-182e09c4909ca48b95faf7bce6f56de92a5ff5c26661f826ef3fdc7ddad2c486978d138bfcf54312775208ec13c65646583021dd2eadcb6af9dc4016de010d19  0003-Add-qt5-suffix-to-search-for-Qt-tools.patch
-d0baa1ba775f13f2782fb5771d2afa618d31e04fbec4442da57b3dd5eb3c2bc85e53518b75f4fd23b5407a520d2430e718e2bcb242af33ce37c48674168e7fce  0004-No-systemd.patch
-accdc7cc9747a32593d4c64eac6869dc232ef8e6775066a56e41180b23d61f6f749779f37cd98e824cd54c60edb40f7c1fadede24c1abf5ef14daa79fa0a8a35  0005-Disable-lightdm-integration.patch
-d75ebc866f7c5ec0ceb3c23e3898a66906e1472805cb1a7a63beb3a9feb9b7fb11bbc5756bcb4959527e686f63ef348ed6d8a05d98971796b2366b23fff01efe  0006-Change-hard-coded-launcher-logo-to-one-set-by-a-reso.patch
-7a329bb4b0e17152fa900d5c9097fb472bfc0f4d0cc62c9709cfb1d60e0a2159934cddcd3d098ae1de7badfe8a89ee596f98cb9b138bd99a620e2c11940b591e  2010_use-desktop-qtmir.patch
+c685cf0fa845c2f72abfbe0a99dab71b8842e98d3086b6a6cf70c8ef614463c5a52b888a94272c2217d13776e8748e8e55e7e47b6bc2e018dfb94242ba2208df  lomiri-0.4.0.tar.gz
+2484c0530689cc86683d8f4de2dc66a3799511b3d3bca714e1f5b911eceebe69635db4fbb281eec4eae9614bfaa53990ec7869a8646f2ff79cf19646bcd77b47  0001-Disable-broken-tests-due-to-dropped-mocks-from-mir-2.patch
+d46b40b968bf83d61463f2eeb1e0982d9a41e9a6dfb7c515bd9d07f289134deb265278a9a9a1de2b9fbc3501391820862bd51680e98a1fc27b285ffbb584030b  0002-Add-qt5-suffix-to-search-for-Qt-tools.patch
+b4fd41d0e4231f8dc00dd289e15f9adf07b22b6436d572754a0aac3e1705db2f0856f2de9cc2f061cb0b910561ba73d9c086327c4a28c6d420414e1f49d82a48  0003-No-systemd.patch
+ae4b517260fabf64566da6ed156121363f987a73afde98bb355df5fbb756f4ce290ce53842257cd6631a8b10d3fbe22f7213ef282377540798d467fbbd9b9312  0004-Disable-lightdm-integration.patch
+5f5a45cbaa1453218c5d1d219a0b29f13a5d5e55d222f35facc3e4ee655afb2bb201d99291dd4cd786125eddd1de1901b6cdee681b9c77a450c9e5292504fb9d  0005-Change-hard-coded-launcher-logo-to-one-set-by-a-reso.patch
+80997035cae1debff4f2421b431ae67dd51f99718a385ac5a679a96339ed7872d59c75b394274166340a012377d7de3563706ab0b3b7dd7787f6462d2b14d3f7  0006-Use-Mir-2.x.patch
 8be30a5e7692c39ffb1948910b45d8fa69a88725df45b67ba69711281b3cf15568b9fff29a8b5b216e5e86656b5961ad7ef9eb0e87c007215e012c3a663045b7  home.svg
 "
