main/ell: switch maintainer
As discussed in [1], Milan would like to have someone else taking over
the maintainership.

'ell' is used by 'mptcpd' that I'm currently maintaining, so I suggested
helping with the ell maintenance.

Link: https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/81699
Signed-off-by: Matthieu Baerts (NGI0) <matttbe@kernel.org>

--- a/main/ell/APKBUILD
+++ b/main/ell/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Milan P. Stanić <mps@arvanta.net>
-# Maintainer: Milan P. Stanić <mps@arvanta.net>
+# Maintainer: Matthieu Baerts (NGI0) <matttbe@kernel.org>
 pkgname=ell
 pkgver=0.74
-pkgrel=0
+pkgrel=1
 pkgdesc="Linux library for embedded development"
 url="https://01.org/ell"
 arch="all"
