--- a/community/hyprgraphics/APKBUILD
+++ b/community/hyprgraphics/APKBUILD
@@ -1,14 +1,13 @@
 maintainer="Zach DeCook <zachdecook@librem.one>"
 pkgname=hyprgraphics
-pkgver=0.1.1
-pkgrel=1
+pkgver=0.1.2
+pkgrel=0
 pkgdesc="Hyprland graphics / resource utilities"
 url="https://github.com/hyprwm/hyprgraphics"
 arch="all"
 license="BSD-3-Clause"
 source="
 	https://github.com/hyprwm/hyprgraphics/archive/v$pkgver/hyprgraphics-v$pkgver.tar.gz
-	make-jxl-optional.patch
 	big-endian-jpeg.patch
 	"
 makedepends="cmake"
@@ -19,6 +18,7 @@ makedepends="
 	file-dev
 	hyprutils-dev
 	libjpeg-turbo-dev
+	libspng-dev
 	libwebp-dev
 	pixman-dev
 	"
@@ -48,7 +48,6 @@ package() {
 
 
 sha512sums="
-9295ab3bfcdfed42425ca21d0b8c48f4fc6abba377eaf07ac638e077181380ae57fd352a67420540fda7c4709cae77cde563f328271e36fc38c3101e04e8fd69  hyprgraphics-v0.1.1.tar.gz
-1a69170ea04cd3af3a563739f7efe0716ef64ec81d1bef5109cb2a449d2b26b103e4feb47cb31bf9aee38818cbf8c7449fa5b09ee7c92fb6109b9d7c4213f7e0  make-jxl-optional.patch
+d2795d222efceb57d356b0505a8d088b9c31b39dfb97b02ebb3b283ff765c846aa6d2a2552d646b09a2bd737e6e29845dc0519311302234942b20328e3317bd2  hyprgraphics-v0.1.2.tar.gz
 e03b6ccde020a02d4a32c7a524837c30cf54455b30ab5cf156110c0c6dfebda560a8060af5c4c3e2491f1a1ec333169c4cf6c5bc3db68540a40d1574a86ed18d  big-endian-jpeg.patch
 "
