community/gtk4-layer-shell: move from testing

--- a/community/gtk4-layer-shell/APKBUILD
+++ b/community/gtk4-layer-shell/APKBUILD
@@ -1,5 +1,4 @@
-# Contributor: fossdd <fossdd@pwned.life>
-# Maintainer: fossdd <fossdd@pwned.life>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=gtk4-layer-shell
 pkgver=1.1.1
 pkgrel=0
