community/vte3: move Vte-3.91.typelib to -gtk4
Closes: https://gitlab.alpinelinux.org/alpine/aports/-/issues/17029

--- a/community/vte3/APKBUILD
+++ b/community/vte3/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=vte3
 pkgver=0.80.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Virtual Terminal Emulator library"
 url="https://gitlab.gnome.org/GNOME/vte"
 arch="all"
@@ -63,6 +63,7 @@ gtk4() {
 	depends="adwaita-fonts $pkgname-profile"
 
 	amove usr/lib/libvte-*-gtk4.so.*
+	amove usr/lib/girepository-1.0/Vte-3.*.typelib
 }
 
 profile() {
