community/lf: take over maintainership

--- a/community/lf/APKBUILD
+++ b/community/lf/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Miles Alan <m@milesalan.com>
+# Maintainer: James Chen-Smith <james@chen-smith.net>
 pkgname=lf
 pkgver=34
-pkgrel=1
+pkgrel=2
 pkgdesc="Terminal filemanager written in Go with vim-style keybindings"
 options="chmod-clean net"
 url="https://github.com/gokcehan/lf"
