community/thunderbird: upgrade to 137.0

--- a/community/thunderbird/APKBUILD
+++ b/community/thunderbird/APKBUILD
@@ -1,18 +1,14 @@
 # Contributor: Joseph Benden <joe@benden.us>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=thunderbird
-pkgver=128.8.0
+pkgver=137.0
 pkgrel=0
-_pkgver="${pkgver}esr"
 pkgdesc="Thunderbird email client"
 url="https://www.thunderbird.net/"
-# Limited on:
-# armhf: build failure on armhf due to wasm
-# s390x: limited by rust, cargo and pipewire
-# loongarch64: libc crate
-arch="all !armhf !s390x !loongarch64"
+arch="all !armhf !s390x" # OOM when compiling
 license="GPL-3.0-or-later AND LGPL-2.1-or-later AND MPL-2.0"
 depends="libotr"
+_llvmver=19
 makedepends="
 	alsa-lib-dev
 	automake
@@ -21,8 +17,8 @@ makedepends="
 	bzip2-dev
 	cargo
 	cbindgen
-	clang
-	clang-libclang
+	clang$_llvmver
+	clang$_llvmver-libclang
 	dbus-glib-dev
 	gettext
 	gtk+3.0-dev
@@ -41,10 +37,11 @@ makedepends="
 	libwebp-dev
 	libxcomposite-dev
 	libxt-dev
-	lld
-	llvm-dev
+	lld$_llvmver
+	llvm$_llvmver-dev
 	m4
 	mesa-dev
+	mimalloc2-insecure
 	nasm
 	nodejs
 	nspr-dev
@@ -58,22 +55,30 @@ makedepends="
 	wireless-tools-dev
 	zip
 	"
-source="https://ftp.mozilla.org/pub/thunderbird/releases/$_pkgver/source/thunderbird-$_pkgver.source.tar.xz
+source="https://ftp.mozilla.org/pub/thunderbird/releases/$pkgver/source/thunderbird-$pkgver.source.tar.xz
+	abseil-cpp.patch
+	bmo-1928504-enable-relr.patch
+	bmo-1952657-no-execinfo.patch
 	fix-fortify-system-wrappers.patch
 	fix-libresolv-path.patch
 	fix-rust-target.patch
 	fix-webrtc-glibcisms.patch
 	lfs64.patch
 	metainfo.patch
-	nrappkit-qsort.patch
-	ppc-musttail.patch
+	no-ccache-stats.patch
 	rust-lto-thin.patch
-	sandbox-fork.patch
 	sandbox-sched_setscheduler.patch
-	icu74.patch
+	sqlite-ppc.patch
+
+	loong-skia-lasx.patch
+	loong0001-Enable-WebRTC-for-loongarch64.patch
+	loong0003-Define-HWCAP_LOONGARCH_LSX_and_LASX.patch
+	loong0004-Fix-ycbcr-chromium_types-warning.patch
+	loong0005-Fix-libyuv-build-with-LSX-LASX.patch
 
 	stab.h
 
+	mozconfig
 	distribution.ini
 	mozilla-location.keys
 	thunderbird.desktop
@@ -362,152 +367,23 @@ _clear_vendor_checksums() {
 	sed -i 's/\("files":{\)[^}]*/\1/' third_party/rust/$1/.cargo-checksum.json
 }
 
-# Build with Clang, only supported, much better here
-export CC="clang"
-export CXX="clang++"
-
-export SHELL=/bin/sh
-export BUILD_OFFICIAL=1
-export MOZILLA_OFFICIAL=1
-export USE_SHORT_LIBNAME=1
-export MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE=system
-export MOZBUILD_STATE_PATH="$srcdir"/mozbuild
-# disable desktop notifications
-export MOZ_NOSPAM=1
-# Find our triplet JSON
-export RUST_TARGET="$CTARGET"
-
-# set rpath so linker finds the libs
-export LDFLAGS="$LDFLAGS -Wl,-rpath,$_mozappdir"
-
-# let firefox do this itself.
-unset CARGO_PROFILE_RELEASE_OPT_LEVEL
-unset CARGO_PROFILE_RELEASE_LTO
-
-export CFLAGS="${CFLAGS/-fstack-clash-protection/} -g0 -O2"
-export CXXFLAGS="${CXXFLAGS/-fstack-clash-protection/} -g0 -O2 -Wno-deprecated-builtins -Wno-deprecated-declarations"
-
 prepare() {
 	default_prepare
-	rm -rf third_party/rust/packed_simd/
 	cp "$srcdir"/stab.h toolkit/crashreporter/google-breakpad/src/
 
+	export CFLAGS="${CFLAGS/-fstack-clash-protection/} -g0 -O2"
+	export CXXFLAGS="${CXXFLAGS/-fstack-clash-protection/} -g0 -O2 -Wno-deprecated-builtins -Wno-deprecated-declarations"
+
 	_clear_vendor_checksums audio_thread_priority
-	_clear_vendor_checksums bindgen
+	_clear_vendor_checksums libc
 
 	base64 -d "$srcdir"/mozilla-location.keys > "$builddir"/mozilla-api-key
-
-	case "$CARCH" in
-	aarch64|arm*|x86*)
-		# disable-elf-hack: exists only on aarch64, arm*, x86, x86_64
-		local arch_config="ac_add_options --disable-elf-hack"
-		;;
-	esac
-
-	# webrtc does not build on these
-	case "$CARCH" in
-	ppc64le)
-		local webrtc_config="ac_add_options --disable-webrtc"
-		;;
-	esac
-
-	# FF esr doesn't have SIMD available on armv7
-	case "$CARCH" in
-	armv7)
-		# broken here
-		local rust_simd="ac_add_options --disable-rust-simd"
-		;;
-	*)
-		local rust_simd="ac_add_options --enable-rust-simd"
-		;;
-	esac
-
-	# sandbox only supported here
-	case "$CARCH" in
-	x86*|armv7|aarch64)
-		local sandbox="ac_add_options --enable-sandbox"
-		;;
-	*)
-		local sandbox="ac_add_options --disable-sandbox"
-		;;
-	esac
-
-	cat > base-mozconfig <<-EOF
-	# disable unwanted things
-	ac_add_options --disable-bootstrap
-	ac_add_options --disable-cargo-incremental
-	ac_add_options --disable-crashreporter
-	ac_add_options --disable-debug
-	ac_add_options --disable-debug-symbols
-	ac_add_options --disable-install-strip
-	ac_add_options --disable-jemalloc
-	ac_add_options --disable-strip
-	ac_add_options --disable-tests
-	ac_add_options --disable-updater
-
-	# features
-	ac_add_options --enable-alsa
-	ac_add_options --enable-application=comm/mail
-	ac_add_options --enable-dbus
-	ac_add_options --enable-default-toolkit=cairo-gtk3-wayland
-	ac_add_options --enable-ffmpeg
-	ac_add_options --enable-hardening
-	ac_add_options --enable-linker=lld
-	ac_add_options --enable-necko-wifi
-	ac_add_options --enable-official-branding
-	ac_add_options --enable-optimize="$CFLAGS"
-	ac_add_options --enable-pulseaudio
-	ac_add_options --enable-release
-	ac_add_options --enable-update-channel=release
-
-	# system libs
-	ac_add_options --enable-system-pixman
-	ac_add_options --with-librnp-backend=botan
-	ac_add_options --with-system-botan
-	ac_add_options --with-system-bz2
-	ac_add_options --with-system-ffi
-	ac_add_options --with-system-icu
-	ac_add_options --with-system-jpeg
-	ac_add_options --with-system-jsonc
-	ac_add_options --with-system-libevent
-	ac_add_options --with-system-libvpx
-	ac_add_options --with-system-nspr
-	ac_add_options --with-system-nss
-	ac_add_options --with-system-png
-	ac_add_options --with-system-webp
-	ac_add_options --with-system-zlib
-
-	# misc
-	ac_add_options --prefix=/usr
-	ac_add_options --with-distribution-id=org.alpinelinux
-	ac_add_options --with-libclang-path=/usr/lib
-	ac_add_options --with-unsigned-addon-scopes=app,system
-	ac_add_options --with-wasi-sysroot=/usr/share/wasi-sysroot
-	ac_add_options --host=$CHOST
-	ac_add_options --target=$CTARGET
-
-	# objdir
-	mk_add_options MOZ_OBJDIR="$builddir/obj"
-
-	mk_add_options RUSTFLAGS="$RUSTFLAGS"
-
-	# keys
-	# these are for alpine linux use only
-	ac_add_options --with-mozilla-api-keyfile="$builddir/mozilla-api-key"
-
-	$arch_config
-	$rust_simd
-	$sandbox
-	$webrtc_config
-	EOF
 
 	# XXX: fix transparency in icon
 	sed -i '/^<rect/d' comm/mail/branding/thunderbird/TB-symbolic.svg
 }
 
 build() {
-	cat > .mozconfig base-mozconfig
-
 	export MOZ_BUILD_DATE="$(date ${SOURCE_DATE_EPOCH:+ -d@${SOURCE_DATE_EPOCH}} "+%Y%m%d%H%M%S")"
 
 	# for lto
@@ -517,25 +393,60 @@ build() {
 	unset RUSTFLAGS
 
 	local thinlto_jobs=${JOBS:-1}
+	local link_threads=${JOBS:-1}
 
 	case "$CARCH" in
 	# on this platform, lld seems to not utilise >1 threads for thinlto for some reason.
 	# at the same time, having more than 8 also crashes lld for firefox buildsystems (why?).
-	aarch64)
+	aarch64|s390x)
 		if [ $thinlto_jobs -gt 8 ]; then
 			thinlto_jobs=8
 		fi
 		;;
 	esac
 
-	export LDFLAGS="$LDFLAGS -Wl,--thinlto-jobs=$thinlto_jobs"
+	case "$CARCH" in
+	arm*|x86|s390x)
+		link_threads=1
+		;;
+	esac
+
+	export LDFLAGS="$LDFLAGS -Wl,--thinlto-jobs=$thinlto_jobs -Wl,--threads=$link_threads"
+
+	export SHELL=/bin/sh
+	export BUILD_OFFICIAL=1
+	export MOZILLA_OFFICIAL=1
+	export USE_SHORT_LIBNAME=1
+	export MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE=system
+	export MOZBUILD_STATE_PATH="$srcdir"/mozbuild
+	# disable desktop notifications
+	export MOZ_NOSPAM=1
+	# Find our triplet JSON
+	export RUST_TARGET="$CTARGET"
+
+	# has to be the same version or older than lld
+	export CC="clang-$_llvmver"
+	export CXX="clang++-$_llvmver"
+
+	# set rpath so linker finds the libs
+	export LDFLAGS="$LDFLAGS -Wl,-rpath,$_mozappdir"
+
+	# let thunderbird do this itself.
+	unset CARGO_PROFILE_RELEASE_OPT_LEVEL
+	unset CARGO_PROFILE_RELEASE_LTO
+
+	export CBUILD CHOST builddir
+	envsubst < "$srcdir"/mozconfig > base-mozconfig
+
+	export MOZCONFIG=base-mozconfig
 
 	case "$CARCH" in
 	# lto for 64-bit systems only
 	aarch64|x86_64|ppc64le)
-		cat > .mozconfig base-mozconfig <<-EOF
+		cat > lto-mozconfig base-mozconfig <<-EOF
 		ac_add_options --enable-lto=cross
 		EOF
+		export MOZCONFIG=lto-mozconfig
 	esac
 
 	./mach build
@@ -578,21 +489,29 @@ package() {
 	rm "$pkgdir"/$_mozappdir/thunderbird-bin
 	ln -sfv /usr/bin/thunderbird "$pkgdir"/$_mozappdir/thunderbird-bin
 }
+
 sha512sums="
-a6ccdf5a067a1f908246885b22a1dadc66f4667d4ac74d1c1867c88a70b194c508e8d9e139f357ebc1d344f032fdc9b75c365fe49937d2463d7bd61b85ef86d1  thunderbird-128.8.0esr.source.tar.xz
+252c3adef18c14e52388b11a2646df7caa7e85d1697336ebe9aeb94ad5a37f8dc48d1e61066e94fed6ddea0b27705a7a76a3215456acde5066191db72323ab88  thunderbird-137.0.source.tar.xz
+616169325dc7715d3ff558c1846394d992f1a0a9427af5339e84abf3d9e7d85a5f9f6bae218ee3416ef39769a56150ac35881435ac09b976876fd556fddeac38  abseil-cpp.patch
+106f168dc37a693e279f821695637e0ac0d3534b07f093ac835c5b11f604ad2f11817bbe9604009e27a2b1410c6584a84fe388621170f511914e3e8aa154639e  bmo-1928504-enable-relr.patch
+32c566a1529d36b4816cef80bb56f0723d0ec2e407e5e4a61cd278d40dafa3a3032d5a77497f191989f4954fa3ee539845dd170a596e0b22c6ef5b337405a72e  bmo-1952657-no-execinfo.patch
 19eea840aa9c1c21e7bd1f832ec078989fe6f08fca40baa271be7e74f1cffeb5ab8d3218a93e664b8d90a41506dede524e2a5174cd47580866109bc6711ea969  fix-fortify-system-wrappers.patch
 0b9f44c3c2c4efaf073d2021357f7ad61f7e8ca316494c35f785723f43e0e9b29712cd22abe02260df43a5c57cf394e8a1e308cab5a001620ed8a458a563fceb  fix-libresolv-path.patch
 cd68b89e29e5f6379fbd5679db27b9a5ef70ea65e51c0d0a8137e1f1fd210e35a8cfb047798e9549bc7275606d7ec5c8d8af1335d29da4699db7acd8bc7ff556  fix-rust-target.patch
 305c874fdea3096e9c4c6aa6520ac64bb1c347c4b59db8360096646593fe684c3b5377874d91cecd33d56d1410b4714fbdea2b514923723ecbeff79d51265d9b  fix-webrtc-glibcisms.patch
 e75daab5573ec6e28d3940a9bb98304d572dfb26ce7c1709e99fdd75dfa58abce170c96de683f8dc2224ea2e118aa7d78affbd54f99c4e328a4641685d64bd7d  lfs64.patch
 79948c0670e4ff1d9dac3b11b64937e58fb73dd9ea405cbebc6777ec96243ac3d8ac820b2ac67c1b39aaa286267da156b00ff28abc40a5071e189637046b9834  metainfo.patch
-b586ddb21b50fa8fba798c3a269518049c38cc52fd91ad00e96a3f1144e6b2879d9df1a182a2fb181898042043ae98381a70d0e4acbf8aa705d2b4f62c17a5a1  nrappkit-qsort.patch
-ea9ca4bae9c56497ec6de6ba8599e8428c6ba623c71ea9e40655970102c70b9407dc4e8403d068781174b15e03ab484a89463c9e8623cfac32d82fbbe43cb65e  ppc-musttail.patch
-1c6918dd6655d3a1251bfd4af2e1c561cbb00d540a883b4c1ebf7f5de530d754d9ac07b4b5f56cdab6c511d25c8910ec94043f5733e97501a67abffe1bafaeb1  rust-lto-thin.patch
-2518f2fc75b5db30058e0735f47d60fdf1e7adfaeee4b33fb2afb1bd9a616ce943fd88f4404d0802d4083703f4acf1d5ad42377218d025bc768807fbaf7e1609  sandbox-fork.patch
-94433c5ffdbe579c456d95c5f053f61fcbab2f652fa90bc69dcc27d9a1507a8e5c677adeadae9a7a75cc9a55184c1040737f4dfd10b279c088ef016561e6f135  sandbox-sched_setscheduler.patch
-afabea91b328c5a68eaa20f9099ac7b2d0e7f2423e816b05ed168bdd326a5684fa02de08bf05c6033e9b888f02775d1b0443a00329b7a632ee399122a391c13a  icu74.patch
+c0437a6753f3f350968fa12d250efdfe1bea77baf0e4c06b072b5cc9e78c774dbf4506bc536337030d349fb3ba4460097b75b0c7c5b8fb2d39d8b0a392948936  no-ccache-stats.patch
+5518b7fa131f1a75a24ebd62288d826f9c977113df86b6f36651047d8dd941952b34c8c5fcbac8eff6656ccfa34f86c0c03304db5ff9331f9627897391ccbf0f  rust-lto-thin.patch
+f8c3555ef6207933cbffbf4fc101a9b4c0d2990c0063162f0f0bde70ef0b46f86bfac42e7110695183424a87948de593f3927b2d8509ede3e4fc7bd8a1fad1ce  sandbox-sched_setscheduler.patch
+67bc0be3da973e6859256bf9be4df7100837430e6076fc0bd623f504c35e02e6c191e9c5a3a1d202e5ad4d89f874f254a09e164e39c7bfd97bbc8d4c8d0632a5  sqlite-ppc.patch
+db85b37c10a0c7c3c68b28e68a46af96c7200354270d551fe17da9f615f19a4606fd431f873354ec33b308248406d5ae83543ccc177c13ddcde5cb6faa766d2d  loong-skia-lasx.patch
+10190908796ea681cb9c7726e5f000d010dc438560f1c9574ad52f91b984c92634291453d4f7cdb3a5b5e54c1968513bf78d4dc44f5befa39d58065d0e9c3326  loong0001-Enable-WebRTC-for-loongarch64.patch
+bcc6987568082e5471962fed98110c13f9a81de7bba11cd961c2ac6c1240e677dc141d6834bf5755d2d85fc8251e522920dd3d9afae20ed9d9896b632ee9336f  loong0003-Define-HWCAP_LOONGARCH_LSX_and_LASX.patch
+f95b3a8338b34c98ae028278fcec3a1ae48d8de9fa9eed54544151ae994b57b8d0ff0e6363632257d3cbe9452bcd93ade5c139cf728d0a149a038a179a0b4016  loong0004-Fix-ycbcr-chromium_types-warning.patch
+530a695c6f456db6988d850571b9b640320444fe46aba97371b5553ddad2103fed5e1064b790924dd90af47861807de4386958cabe3bcaa48700f330ce5bd6df  loong0005-Fix-libyuv-build-with-LSX-LASX.patch
 0b3f1e4b9fdc868e4738b5c81fd6c6128ce8885b260affcb9a65ff9d164d7232626ce1291aaea70132b3e3124f5e13fef4d39326b8e7173e362a823722a85127  stab.h
+35c1169aa7b10b317a8539fdb23b608a29c883c7c0056437341e10eac5e60eb8c4e4bb0e658da580c146812450c96774b8f90a01a129ed2875526a789d521b18  mozconfig
 3d1f85c2cd446a973cf158caada7fbc32cbc890ec5111d6d2ac98862df11d0c80cc52eaec290721c64034be7398ed68a91405f168e13ca71ff1981f51cb60046  distribution.ini
 382510375b1a2fa79be0ab79e3391a021ae2c022429ffbaa7e7a69166f99bb56d01e59a1b10688592a29238f21c9d6977672bd77f9fae439b66bdfe0c55ddb15  mozilla-location.keys
 5eddbfdbe3f8ed31936c0b9e9e6313aa35f1a75d0a2303c0a0742e06997714b787e444fae1696453e3e146226bf2f7fe2ab5e34b0b2069f05f0ccbc55099de89  thunderbird.desktop
