testing/electron: security upgrade to 34.4.1

--- a/testing/electron/APKBUILD
+++ b/testing/electron/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: lauren n. liberda <lauren@selfisekai.rocks>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=electron
-pkgver=34.3.4
+pkgver=34.4.1
 _gittag=v"${pkgver/_beta/-beta.}"
 pkgrel=2
 _chromium=132.0.6834.210
@@ -313,6 +313,7 @@ prepare() {
 	# libaom - https://aomedia.googlesource.com/aom/+/706ee36dcc82%5E%21/
 	#   but watch this space: https://aomedia-review.googlesource.com/c/aom/+/188606
 	# jsoncpp, re2, snappy, swiftshader-*, woff2 - requires use_custom_libcxx=false
+	# icu 76 does not build - https://bugs.gentoo.org/943216
 	local chromium_use_system="
 		brotli
 		crc32c
@@ -323,7 +324,6 @@ prepare() {
 		fontconfig
 		freetype
 		harfbuzz-ng
-		icu
 		libdrm
 		libevent
 		libjpeg
@@ -545,7 +545,7 @@ lang() {
 }
 
 sha512sums="
-965b8217d890247e422515071ac1c201e5c14a08317fc26e4a60d11b0879979a54b68b00c73babcd6e611989c5e7f00651c20a2cebe737fc97499eec3eb9820d  electron-v34.3.4-132.0.6834.210.tar.zst
+ac1bdc1b248d36dc68f12b6c7b7feffc9796fa38b4008f591b488657f992a46ccfc78c431505ea156d42037454b0b1b7b5295cda0f4ee256a51ec3db1fa30814  electron-v34.4.1-132.0.6834.210.tar.zst
 a5217c70ad3c40bbbe75b8c9c62158c69d64bc1e17338b6395718e03baba962fb9bf3bf610f9e569c3c38b5bb1dd7972b1da413776c6ec2afdd42cbbf051cfb1  copium-131.2.tar.gz
 29bb685e03356a77df5fd347cdf55194cc8b3265c421cc76e54d64edefc329dbcb052deb26b22e8f587ce68456876c071de1b7d258dd0fcc6ee66c875ec4a020  chromium-revert-drop-of-system-java.patch
 d9cc4a37a0311d23ae315a8d8124f8dbf60db8cc4a3943818638174b20387f1d770d00871f6608957b246ad956abca43c22ea0b072724287f2947e1909e47323  compiler.patch
